# TradeStrategyComparer

./: README.md
TradeStrategyComparer/: app.py  chart_generator.py  data_logger.py  jupiter_api.py  pyproject.toml  trading_bots.py
TradeStrategyComparer/data/: trading_data_20250624_025805.csv  trading_data_20250624_033142.csv  trading_data_20250624_033230.csv  trading_data_20250624_033428.csv  trading_data_20250624_033510.csv  trading_data_20250624_180312.csv  trading_data_20250625_204707.csv  trading_data_20250625_204755.csv  trading_data_20250626_185240.csv  trading_data_20250626_185854.csv  trading_data_20250626_190442.csv  trading_data_20250626_190614.csv  trading_data_20250626_192427.csv  trading_data_20250627_120736.csv  trading_data_20250627_174029.csv
TradeStrategyComparer/static/css/: custom.css
TradeStrategyComparer/static/js/: dashboard.js
TradeStrategyComparer/templates/: 404.html  500.html  index.html  results.html  simulation.html
