[project]
name = "trade-strategy-comparer"
version = "0.1.0"
description = "A Flask web application that compares TWAP vs Smart Quote trading strategies for SOL/USDC using Jupiter API"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
]
